<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.EditToDoFragment">
  <androidx.appcompat.widget.AppCompatTextView
      android:text="@string/todo_name_label"
      android:textSize="@dimen/label_text_size"
      android:layout_width="match_parent"
      android:textStyle="bold"
      android:layout_height="wrap_content"/>
  <androidx.appcompat.widget.AppCompatEditText
      android:textSize="@dimen/text_size"
      android:hint="@string/insert_the_name_of_the_todo"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/todoName"/>
  <androidx.appcompat.widget.AppCompatTextView
      android:text="@string/todo_description_label"
      android:textSize="@dimen/label_text_size"
      android:layout_width="match_parent"
      android:textStyle="bold"
      android:layout_height="wrap_content"/>
  <androidx.appcompat.widget.AppCompatEditText
      android:hint="@string/insert_the_description_here"
      android:textSize="@dimen/text_size"
      android:layout_width="match_parent"
      android:layout_height="@dimen/description_field_height"
      android:inputType="textMultiLine"
      android:ems="10"
      android:id="@+id/todoDescription"/>
  <androidx.appcompat.widget.AppCompatTextView
      android:text="@string/todo_duedate_label"
      android:textSize="@dimen/label_text_size"
      android:layout_width="match_parent"
      android:textStyle="bold"
      android:layout_height="wrap_content"/>
  <androidx.appcompat.widget.AppCompatEditText
      android:textSize="@dimen/text_size"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="date"
      android:ems="10"
      android:id="@+id/todoDueDate"/>
  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatButton
        android:layout_weight="1"
        android:text="@string/save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/saveButton"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_weight="1"
        android:text="@string/delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/deleteButton"/>
  </LinearLayout>

</LinearLayout>